- fixed styles - deleted stories duplicate - added scrollbar style

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,38 @@ body {
     font-weight: 500;
 }
 
+::-webkit-scrollbar-button {
+    background-repeat: no-repeat;
+    width: 6px;
+    height: 0;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 100;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(0, 0, 0, 0.15);
+}
+
+::-webkit-resizer {
+    background-repeat: no-repeat;
+    width: 0;
+    height: 0;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
 a {
     color: inherit;
     text-decoration: none;
@@ -21,17 +53,20 @@ a {
     outline: none;
     resize: none;
     scrollbar-width: thin;
+    word-break: break-word;
 }
-
-
-.shadowCard {box-shadow: 1px -1px 10px #cecece;} 
 
 .absoluteCard {
     position: absolute;
     top: -10px;
     right: 20px;
+    padding: 3px 16px;
+    border-radius: 20px;
+    font-size: 14px;
+    font-weight: 300;
 }
 
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
